# PeppeHuffman

./: CMakeLists.txt  Compress_Decompress.cpp  Compress_Decompress.h  H_Node.cpp  H_Node.h  H_tree.cpp  H_tree.h  PriorityQueue.cpp  PriorityQueue.h  README.md  Words.cpp  Words.h  main.cpp
tests/: input1.txt
